--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="nav_tools">TRADUCIR</string>
     <string name="nav_exit">TRADUCIR</string>
     <string name="nav_logout">TRADUCIR</string>
+
+    <string name="nav_dialog_exit_title">TRADUCIR</string>
+    <string name="nav_dialog_exit_message">TRADUCIR</string>
+
+    <string name="true_dialog" translatable="false">@android:string/ok</string>
+    <string name="false_dialog" translatable="false">@android:string/cancel</string>
 </resources>
