--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="false_dialog" translatable="false">@android:string/cancel</string>
     <string name="nav_dialog_exit_2_title">TRADUCIR</string>
     <string name="nav_dialog_exit_2_message">TRADUCIR</string>
+
+    <string name="login_title">TRADUCIR</string>
     <string name="login_user_title">TRADUCIR</string>
     <string name="login_user_username">TRADUCIR</string>
     <string name="login_user_password">TRADUCIR</string>
@@ -35,6 +37,7 @@
     <string name="login_user_login">TRADUCIR</string>
     <string name="login_user_fail_login">TRADUCIR</string>
 
+    <string name="signup_title">TRADUCIR</string>
     <string name="signup_user_title">TRADUCIR</string>
     <string name="signup_user_username">TRADUCIR</string>
     <string name="signup_user_usermail">TRADUCIR</string>
@@ -47,8 +50,21 @@
     <string name="signup_user_gender">TRADUCIR</string>
     <string name="signup_user_signup">TRADUCIR</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="index_title">TRADUCIR</string>
 
+    <string-array name="list_months">
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+        <item>TRADUCIR</item>
+    </string-array>
 
 </resources>
