--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -67,4 +67,9 @@
         <item>TRADUCIR</item>
     </string-array>
 
+    <string name="forgot_pass_title">TRADUCIR</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
