--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -69,7 +69,9 @@
 
     <string name="forgot_pass_title">TRADUCIR</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="forgot_pass_user_title">TRADUCIR</string>
+    <string name="forgot_pass_btn">TRADUCIR</string>
+    <string name="forgot_pass_instructions">TRADUCIR</string>
+    <string name="forgot_pass_code_hint">TRADUCIR</string>
 
 </resources>
