--- a/mobile/src/main/res/values-es/strings.xml
+++ b/mobile/src/main/res/values-es/strings.xml
@@ -62,6 +62,7 @@
     <string name="forgot_pass_title">Recuperar contraseña</string>
     <string name="forgot_pass_title_step1">Paso 1</string>
     <string name="forgot_pass_title_step2">Paso 2</string>
+    <string name="forgot_pass_title_step3">Paso 2</string>
     <string name="forgot_pass_user_title">Recuperar la cuenta</string>
     <string name="forgot_pass_btn">Recuperar</string>
     <string name="forgot_pass_instructions">Verifica tu correo y pega el código en la siguiente casilla, luego porcederás al cambio de contraseña.</string>
