--- a/mobile/src/main/res/values-es/strings.xml
+++ b/mobile/src/main/res/values-es/strings.xml
@@ -27,6 +27,7 @@
     <string name="login_user_password">Contraseña</string>
     <string name="login_user_recovery_pass">¿Has olvidado la contraseña?</string>
     <string name="login_user_fail_login">Ambos campos son obligatorios</string>
+    <string name="login_user_fail_login_bad_user_pass">Usuario o contraseña incorrecto</string>
     <string name="login_user_login">Entrar</string>
 
     <string name="signup_title">Nuevo usuario</string>
