--- a/mobile/src/main/res/values-es/strings.xml
+++ b/mobile/src/main/res/values-es/strings.xml
@@ -17,7 +17,8 @@
     <string name="nav_home">Inicio</string>
 
     <string name="nav_dialog_exit_title">¿Ya nos abandonas… T_T?</string>
-    <string name="nav_dialog_exit_message">¿Estas seguro?</string>
+    <string name="nav_dialog_sure_message">¿Estas seguro?</string>
+    <string name="nav_dialog_logout_title">Cerrando sesión…</string>
 
     <string name="nav_dialog_exit_2_title">Hasta la próxima!</string>
     <string name="nav_dialog_exit_2_message">Vuelve pronto!</string>
@@ -98,5 +99,8 @@
     <string name="settings_notification_mail">Activa la opción para enviar por correo las actualizaciones de las partidas</string>
     <string name="settings_notification_autologin">Inicio de sesión automáticamente</string>
     <string name="settings_changed_success">Se ha actualizado la configuración</string>
+
+    <string name="option_not_available">La opción seleccionada no está disponible.</string>
+    <string name="login_user_logging">Iniciando sesión…</string>
 
 </resources>
