--- a/mobile/src/main/res/values-es/strings.xml
+++ b/mobile/src/main/res/values-es/strings.xml
@@ -4,7 +4,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="option_not_available">La opción seleccionada no está disponible.</string>
-    <string name="action_settings">Settings</string> <!-- Pendiente de borrar -->
 
     <!-- Menú lateral -->
     <string name="nav_games">Partidas</string>
@@ -107,7 +106,13 @@
     <string name="settings_changed_success">Se ha actualizado la configuración</string>
     <string name="settings_permisions_app">Consulta los permisos asignados a RolerMaster</string>
     <string name="settings_title_permisions_app">Permisos</string>
+    <string name="settings_title_export_pdf">Exportación a PDF</string>
+    <string name="settings_export_pdf_false">Parcial, se exportarán las secciones deseadas a diferentes PDF</string>
+    <string name="settings_export_pdf_true">Completa, se exportará toda la información a un único PDF</string>
 
-    <!-- Pantalla de  -->
+    <!-- View AlertDialog -->
+    <string name="alert_dialog_title_info">Información</string>
+    <string name="alert_dialog_title_error">Error</string>
+
 
 </resources>
