--- a/mobile/src/main/res/values-es/strings.xml
+++ b/mobile/src/main/res/values-es/strings.xml
@@ -98,17 +98,19 @@
     <string name="settings_notification_title_mail">Notificaciones por email</string>
     <string name="settings_notification_title_calendar">Notificaciones de agenda</string>
     <string name="settings_notification_title_swatch">Notificaciones en el reloj</string>
-    <string name="settings_notification_title_autologin">Autologin</string>
+    <string name="settings_title_autologin">Autologin</string>
     <string name="settings_notification_swatch">Muestra alertas de cambios en las partidas vinculadas</string>
     <string name="settings_notification_calendar">Activa la opción para crear alertas de agenda</string>
     <string name="settings_notification_mail">Activa la opción para enviar por correo las actualizaciones de las partidas</string>
-    <string name="settings_notification_autologin">Inicio de sesión automáticamente</string>
+    <string name="settings_autologin">Inicio de sesión automáticamente</string>
     <string name="settings_changed_success">Se ha actualizado la configuración</string>
     <string name="settings_permisions_app">Consulta los permisos asignados a RolerMaster</string>
     <string name="settings_title_permisions_app">Permisos</string>
     <string name="settings_title_export_pdf">Exportación a PDF</string>
     <string name="settings_export_pdf_false">Parcial, se exportarán las secciones deseadas a diferentes PDF</string>
     <string name="settings_export_pdf_true">Completa, se exportará toda la información a un único PDF</string>
+    <string name="settings_notification_app">Permite las notificaciones entre cuentas RolerMaster</string>
+    <string name="settings_notification_title_app">Notificaciones RolerMaster</string>
 
     <!-- View AlertDialog -->
     <string name="alert_dialog_title_info">Información</string>
